--- a/BE/tsconfig.json
+++ b/BE/tsconfig.json
@@ -2,15 +2,15 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    // "rootDir": "./src",           // Point to the 'src' folder (adjust based on where your code is)
-    "outDir": "./dist",           // Output compiled JavaScript to 'dist' folder
+    // "rootDir": "./src",         
+    "outDir": "./dist",           
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*"                    // Include all TypeScript files in the 'src' folder
+    "src/**/*"                   
   ],
   "exclude": [
     "node_modules"
